# Ultimate-Tic-Tac-Toe

./: .gitignore  CMakeLists.txt  PROPOSAL.md  README.md
apps/: cinder_app_main.cc
include/core/: action.h  ai.h  board.h  board.hpp  mark.h  move_history_entry.h  player.h  subboard.h  superboard.h  tree_search_ai.h  win_state.h
include/visualizer/: ai_toggle_button.h  board_view.h  button.h  completion_stage.h  game_completion_message_view.h  info_panel_view.h  start_or_reset_button.h  ultimate_tictactoe_app.h
src/core/: action.cc  ai.cc  board.cc  mark.cc  player.cc  subboard.cc  superboard.cc  tree_search_ai.cc
src/visualizer/: ai_toggle_button.cc  board_view.cc  button.cc  game_completion_message_view.cc  info_panel_view.cc  start_or_reset_button.cc  ultimate_tictactoe_app.cc
tests/: board_test.cc  subboard_test.cc  superboard_test.cc  tree_search_ai_test.cc
